# basic-p2p-messaging

./: README.md  query_request.json  registration_request.json
client_protocol/: Cargo.toml
client_protocol/src/: client.rs  main.rs  message.rs
client_protocol_deprecated/src/: client.rs  message.rs
server_protocol/: Cargo.toml
server_protocol/src/: main.rs  server.rs
